force-app/main/default/objects/custom_create113__c/custom_create113__c.object-meta.xml
<CustomObject>
    <label>Custom created object113</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects113</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>