force-app/main/default/objects/custom_create113__c/fields/custom_create_113field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_113field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 113field545</label>
    <type>Checkbox</type>
</CustomField>